<resources>
    <string name="app_name">highChartTest</string>
    <string name="stacked_column_chart">Stacked Column Chart</string>
    <string name="bubble_chart">Bubble Chart</string>
    <string name="report_aura_date">%1$s ~ %2$s</string>
    <string name="aura_comment">You entered %1$s aura out of %2$s seizures</string>
    <string name="aura_confir">Aura confirmed</string>
    <string name="box_name">%1$s</string>
    <string name="seizures">%1$s seizures</string>
    <string name="no_aura_con">No aura confirmed</string>
    <string name="aura_unknown">Aura unknown</string>
    <string name="no_record">No record</string>
    <string name="pie_string">%1$s \nwas the most\nseizure-relate aura</string>
    <string name="double_vision">Double vision</string>
    <string name="some_id">73%</string>
    <string name="entries">%1$s entries</string>
    <string name="view_all_re">View all records ></string>
    <string name="seizures_text">%1$s of seizures\noccured with aura</string>
    <string name="did_you_hav">All records</string>
    <string name="nov_1_2022">Nov 1, 2022 ~ Nov 7, 2022</string>
    <string name="added_in_ea">Added in each seizure</string>
    <string name="device">%1$s</string>
    <string name="done">Done</string>
    <string name="title_activity_all_record">allRecordActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="all_record_date">%1$s ~ %2$s</string>
    <string name="no_aura_text">No aura recorded\nduring this period.\nAdd any missed record!</string>
    <string name="no_other_symptoms_text">No other symptoms \nrecord during \nthis period.\nAdd any missed record!</string>
    <string name="other_symptoms_text_no_seizure">Fredrick, Wonderful!\nThere was no seizure to \nrecord other symptoms\nduring this period!</string>
    <string name="no_aura_comment">Your input enables us to analyze and\ngenerate reports on your aura pattern.</string>
    <string name="no_other_symptoms_comment">Your input enables us to generate reports\nthat may help you and your doctor\nunderstand your non-seizure symptoms</string>
    <string name="other_symptoms_comment_no_seizure">Keep it going!\nZero is always on your side!</string>
    <string name="no_aura_button">Go to record</string>
    <string name="button_aura">Aura</string>
    <string name="button_symptoms">other symptoms</string>
    <string name="other_symptoms_text">Your most frequent\nother symptom was\n%1$s</string>
    <string name="during_this">During this  \nperiod</string>
    <string name="other_symptoms_trend">Other symptoms trend</string>
    <string name="during_previous_period">During previous\nperiod</string>
    <string name="total_types">Total types</string>
    <string name="daily_avg">Daily avg.</string>
    <string name="symptoms_count">%1$s symptoms</string>
    <string name="entries_count">%1$s entries</string>
    <string name="other_symptoms_no_seizure">Any missed records?\nRecord it now!</string>

</resources>