<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity">



        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:textFontWeight="500"
                    android:layout_marginStart="40dp"
                    android:text="@string/report_aura_date"
                    android:textSize="12sp"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/dmsansregular"
                    android:textColor="#888888" />

            <TextView
                    android:id="@+id/no_aura_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="40dp"
                    android:textFontWeight="500"
                    android:text="@string/no_other_symptoms_text"
                    android:textSize="24sp"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/dmsansregular"
                    android:textColor="#000000" />

            <TextView
                    android:id="@+id/no_bubble_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textFontWeight="400"
                    android:layout_marginStart="40dp"
                    android:text="@string/no_other_symptoms_comment"
                    android:textSize="14sp"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/dmsansregular"
                    android:textColor="#888888" />
            <Button
                    android:id="@+id/box_active"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:gravity="center"
                    android:text="@string/no_aura_button"
                    android:textAppearance="@style/no_aura_button"
                    android:layout_below="@id/aura_list_view"
                    android:background="@drawable/no_aura_button">

            </Button>


        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>