<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="1dp">

    <View
            android:id="@+id/pie_box"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="6dp"
            android:background="@drawable/box_aura" />

    <TextView
            android:id="@+id/pie_name"
            android:layout_width="180dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="18dp"
            android:layout_alignParentTop="true"
            android:paddingTop="1dp"
            android:text="@string/double_vision"
            android:textAppearance="@style/double_visi"
            android:lineSpacingExtra="2sp"
            android:translationY="-0.89sp"
            android:gravity="left|center" />

    <TextView
            android:id="@+id/pie_percent"
            android:layout_width="70dp"
            android:layout_height="22dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="210dp"
            android:layout_alignParentTop="true"
            android:text="@string/some_id"
            android:textAppearance="@style/some_id"
            android:lineSpacingExtra="0sp"
            android:gravity="right|top" />

    <TextView
            android:id="@+id/pie_entries"
            android:layout_width="180dp"
            android:layout_height="16dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="18dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="24dp"
            android:text="@string/entries"
            android:textAppearance="@style/entries"
            android:lineSpacingExtra="0sp"
            android:translationY="-0.19sp"
            android:gravity="top" />
</RelativeLayout>
