<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity">



        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:layout_marginTop="40dp"
                    android:textFontWeight="500"
                    android:layout_marginStart="40dp"
                    android:text="@string/report_aura_date"
                    android:textSize="12sp"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/dmsansregular"
                    android:textColor="#888888" />

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/vid_confetti"
                    android:scaleType="fitXY"
                    android:layout_height="479.5dp">


                <TextView
                        android:id="@+id/no_aura_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="40dp"
                        android:textFontWeight="500"
                        android:text="@string/other_symptoms_text_no_seizure"
                        android:textSize="24sp"
                        android:textAlignment="textStart"
                        android:fontFamily="@font/dmsansregular"
                        android:textColor="#000000" />

                <TextView
                        android:id="@+id/no_bubble_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/no_aura_title"
                        android:layout_marginTop="20dp"
                        android:textFontWeight="400"
                        android:layout_marginStart="40dp"
                        android:text="@string/other_symptoms_comment_no_seizure"
                        android:textSize="14sp"
                        android:textAlignment="textStart"
                        android:fontFamily="@font/dmsansregular"
                        android:textColor="#888888" />
            </RelativeLayout>
            <View
                    android:id="@+id/vector"
                    android:layout_width="20dp"
                    android:layout_height="6dp"
                    android:layout_marginStart="51dp"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/tooltip"
                    />
            <RelativeLayout
                    android:id="@+id/rectangle_2"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/rectangle_2">

                <TextView
                        android:id="@+id/any_missed_"
                        android:layout_width="139dp"
                        android:layout_height="40dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="40dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="16dp"
                        android:text="@string/other_symptoms_no_seizure"
                        android:textAppearance="@style/double_visi"
                        android:lineSpacingExtra="2sp"
                        android:translationY="-0.89sp"
                        android:gravity="top" />

                <Button
                        android:id="@+id/add"
                        android:layout_width="52dp"
                        android:layout_height="28dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="Add"
                        android:textAppearance="@style/add"
                        android:background="@drawable/rectangle_9" />
            </RelativeLayout>


        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>