<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="40dp"
                    android:text="@string/report_aura_date"
                    android:textSize="12sp"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/dmsansregular"
                    android:textColor="#888888" />

            <TextView
                    android:id="@+id/bubble_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="40dp"
                    android:textFontWeight="500"
                    android:text="@string/seizures_text"
                    android:textSize="24sp"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/dmsansregular"
                    android:textColor="#000000" />

            <TextView
                    android:id="@+id/bubble_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="40dp"
                    android:text="@string/aura_comment"
                    android:textSize="14sp"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/dmsansregular"
                    android:textColor="#888888" />

            <com.highsoft.highcharts.core.HIChartView
                    android:id="@+id/bubble_chart"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp" />

            <RelativeLayout
                    android:id="@+id/info_legend"
                    android:layout_width="320dp"
                    android:layout_height="134dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="46dp"
                    android:background="@drawable/info_legend">

                <View
                        android:id="@+id/pie_box"
                        android:layout_width="8dp"
                        android:layout_height="8dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="20dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/box_aura" />

                <View
                        android:id="@+id/box1"
                        android:layout_width="8dp"
                        android:layout_height="8dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="20dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="50dp"
                        android:background="@drawable/box_no_aura" />

                <View
                        android:id="@+id/box2"
                        android:layout_width="8dp"
                        android:layout_height="8dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="20dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="76dp"
                        android:background="@drawable/box_aura_unknown" />

                <View
                        android:id="@+id/box3"
                        android:layout_width="8dp"
                        android:layout_height="8dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="20dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="102dp"
                        android:background="@drawable/box_no_record" />

                <!-- aura text-->
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="16dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="36dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="20dp"
                        android:text="@string/aura_confir"
                        android:textAppearance="@style/aura_confir"
                        android:lineSpacingExtra="0sp"
                        android:translationY="-0.19sp"
                        android:fontFamily="@font/dmsansregular"
                        android:gravity="top" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="16dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="36dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="46dp"
                        android:text="@string/no_aura_con"
                        android:textAppearance="@style/aura_confir"
                        android:lineSpacingExtra="0sp"
                        android:translationY="-0.19sp"
                        android:fontFamily="@font/dmsansregular"
                        android:gravity="top" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="16dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="36dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="72dp"
                        android:text="@string/aura_unknown"
                        android:textAppearance="@style/aura_confir"
                        android:lineSpacingExtra="0sp"
                        android:translationY="-0.19sp"
                        android:fontFamily="@font/dmsansregular"
                        android:gravity="top" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="16dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="36dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="98dp"
                        android:text="@string/no_record"
                        android:textAppearance="@style/aura_confir"
                        android:lineSpacingExtra="0sp"
                        android:translationY="-0.19sp"
                        android:fontFamily="@font/dmsansregular"
                        android:gravity="top" />
                <!--seizures text-->
                <TextView
                        android:id="@+id/aura_confirmed"
                        android:layout_width="match_parent"
                        android:layout_height="16dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="242dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="20dp"
                        android:text="@string/seizures"
                        android:textAppearance="@style/seizures"
                        android:lineSpacingExtra="0sp"
                        android:translationY="-0.19sp"
                        android:fontFamily="@font/dmsansregular"
                        android:gravity="start" />

                <TextView
                        android:id="@+id/no_aura_confirmed"
                        android:layout_width="match_parent"
                        android:layout_height="16dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="242dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="46dp"
                        android:text="@string/seizures"
                        android:textAppearance="@style/seizures"
                        android:lineSpacingExtra="0sp"
                        android:translationY="-0.19sp"
                        android:fontFamily="@font/dmsansregular"
                        android:gravity="start" />

                <TextView
                        android:id="@+id/aura_unknown"
                        android:layout_width="match_parent"
                        android:layout_height="16dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="242dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="72dp"
                        android:text="@string/seizures"
                        android:textAppearance="@style/seizures"
                        android:lineSpacingExtra="0sp"
                        android:translationY="-0.19sp"
                        android:fontFamily="@font/dmsansregular"
                        android:gravity="start" />

                <TextView
                        android:id="@+id/no_record"
                        android:layout_width="match_parent"
                        android:layout_height="16dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="242dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="98dp"
                        android:text="@string/seizures"
                        android:textAppearance="@style/seizures"
                        android:lineSpacingExtra="0sp"
                        android:translationY="-0.19sp"
                        android:fontFamily="@font/dmsansregular"
                        android:gravity="start" />

            </RelativeLayout>

            <TextView
                    android:id="@+id/pie_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:layout_marginStart="40dp"
                    android:text="@string/report_aura_date"
                    android:textSize="12sp"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/dmsansregular"
                    android:textColor="#888888" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="40dp"
                    android:text="@string/pie_string"
                    android:textSize="24sp"
                    android:textFontWeight="500"
                    android:textAlignment="textStart"
                    android:fontFamily="@font/dmsansregular"
                    android:textColor="#000000" />

            <com.highsoft.highcharts.core.HIChartView
                    android:id="@+id/pie_chart"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginRight="90dp" />

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="320dp"
                    android:layout_height="381dp"
                    android:layout_marginStart="45dp"
                    android:layout_marginEnd="45dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/list_legend">

                <ListView
                        android:id="@+id/list_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:scrollbars="none"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="20dp"
                        android:dividerHeight="20dp"
                        android:nestedScrollingEnabled="false" />

                <View
                        android:id="@+id/div"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="320dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/div" />

                <TextView
                        android:id="@+id/view_all_re"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/view_all_re"
                        android:textAppearance="@style/view_all_re"
                        android:lineSpacingExtra="2sp"
                        android:translationY="-0.89sp"
                        android:textFontWeight="500"
                        android:layout_marginTop="341dp"
                        android:layout_marginStart="97.5dp"
                        android:gravity="top" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>